fix: SG's text OOB when too long

--- a/src/component/SheetGenerator/Sheet.scss
+++ b/src/component/SheetGenerator/Sheet.scss
@@ -75,6 +75,7 @@
     p {
       width: 30rem;
       color: Style.$Basic-Contrast;
+      word-break: break-all;
     }
   }
 }
